# Codec-Project

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/io/: VideoIO.hpp
include/processing/: SpatialTransformation.hpp
src/: main.cpp
src/io/: VideoIO.cpp
src/processing/: SpatialTransformation.cpp
